# parcial2hilos

./: .gitignore  CMakeLists.txt  Examen Practico Hilos.docx  ExamenParcial2.cpp  README.md  gui.cpp  imageProcessing  imageProcessing.cpp  imageProcessing.h  parcial2
